--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "@reduxjs/toolkit": "^2.2.8",
     "@vitejs/plugin-react": "^4.3.2",
     "axios": "^1.7.7",
+    "framer-motion": "^11.11.8",
+    "lucide-react": "^0.452.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-query": "^3.39.3",
