--- a/package.json
+++ b/package.json
@@ -9,10 +9,18 @@
   "dependencies": {
     "@emotion/react": "^11.13.3",
     "@emotion/styled": "^11.13.0",
+    "@mui/icons-material": "^6.1.4",
     "@mui/material": "^6.1.3",
     "@reduxjs/toolkit": "^2.2.8",
     "@vitejs/plugin-react": "^4.3.2",
     "axios": "^1.7.7",
+    "cornerstone-core": "^2.6.1",
+    "cornerstone-tools": "^6.0.10",
+    "cornerstone-wado-image-loader": "^4.13.2",
+    "cornerstone-web-image-loader": "^2.1.1",
+    "dcmjs": "^0.34.5",
+    "dicom-parser": "^1.8.21",
+    "dicom.ts": "^1.2.0",
     "framer-motion": "^11.11.8",
     "lucide-react": "^0.452.0",
     "react": "^18.3.1",
