--- a/package.json
+++ b/package.json
@@ -14,6 +14,9 @@
     "@reduxjs/toolkit": "^2.0.1",
     "@vitejs/plugin-react": "^4.2.1",
     "axios": "^1.6.5",
+    "cornerstone-core": "^2.6.1",
+    "cornerstone-wado-image-loader": "^4.13.2",
+    "dicom-parser": "^1.8.21",
     "dicom.ts": "^1.2.0",
     "framer-motion": "^11.0.3",
     "lucide-react": "^0.312.0",
