--- a/package.json
+++ b/package.json
@@ -52,7 +52,7 @@
     "typescript": "^5.3.3"
   },
   "scripts": {
-    "dev": "vite",
+    "dev": "vite --host",
     "build": "tsc && vite build",
     "lint": "eslint src --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview",
